<resources>
    <string name="app_name">Tyyar Order Manager</string>
    <string name="title_activity_order_details">Order Details</string>
    <string name="order_number">#%d</string>
    <string name="order_items_count">%d Items</string>
    <string name="order_pickup_time">Pickup at %s</string>
    <string name="in_some_min">%d minutes</string>
    <string name="date_time">%1$s, %2$s</string>
    <string name="relative_time">%1$s, %2$s</string>
    <string name="place_autocomplete_clear_button">Clear search</string>
    <string name="place_autocomplete_search_hint">Search</string>
    <string name="preposition_for_date">on %s</string>
    <string name="preposition_for_time">at %s</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="attachment_download_failed_message">Failed to download. Tap to retry.</string>
    <string name="attachment_open_error_message">"Can't open attachment."</string>
    <string name="attachment_upload_access_error_message">Error accessing file</string>
    <string name="attachment_upload_size_limit_error_message">File size too large</string>
    <string name="attachment_upload_source_camera_button">Take Photo</string>
    <string name="attachment_upload_source_gallery_button">Attach Photo</string>
    <string name="attachment_upload_type_error_message">File type not permitted</string>
    <string name="chat_account_offline_message">There are currently no agents online.</string>
    <string name="chat_activity_title">Chat</string>
    <string name="chat_agent_joined_message">%1$s joined the chat</string>
    <string name="chat_agent_left_message">%1$s left the chat</string>
    <string name="chat_end_dialog_cancel_button">Cancel</string>
    <string name="chat_end_dialog_confirm_button">End</string>
    <string name="chat_end_dialog_message">Your chat session will be closed</string>
    <string name="chat_end_dialog_title">End this chat?</string>
    <string name="chat_ended_message">Chat ended</string>
    <string name="chat_input_field_hint">Reply</string>
    <string name="chat_loading_message">Starting chat…</string>
    <string name="chat_menu_end_button">End chat</string>
    <string name="chat_session_timeout_message">"We've not heard from you for a while so this chat session has been closed. Please start a new chat if you still have questions."</string>
    <string name="chat_visitor_queue_message">Please wait for an agent. There are currently %1$s visitor(s) waiting to be served.</string>
    <string name="could_not_connect_error_message">"Sorry we can't connect you at the moment. Please try again later"</string>
    <string name="could_not_connect_error_title">Could not connect</string>
    <string name="email_transcript_cancel_button">"Don't send"</string>
    <string name="email_transcript_confirm_button">Send</string>
    <string name="email_transcript_email_cancel_button">Cancel</string>
    <string name="email_transcript_email_confirm_button">Ok</string>
    <string name="email_transcript_email_hint">email@address.com</string>
    <string name="email_transcript_email_message">Please enter your email address</string>
    <string name="email_transcript_message">Send a transcript of this chat to your email address</string>
    <string name="email_transcript_title">Email a transcript?</string>
    <string name="input_field_hint">Message</string>
    <string name="message_failed_tap_to_retry">Failed to send. Tap to retry.</string>
    <string name="no_agents_message">Sorry there are no agents available to chat. Please try again later or leave us a message.</string>
    <string name="no_agents_title">No agents available</string>
    <string name="no_connection_error_message">"You don't have an Internet connection at the moment. Please try again when connected"</string>
    <string name="no_connection_error_title">No connection</string>
    <string name="no_connectivity_toast_message">No connection</string>
    <string name="offline_email_error_hint">Please enter your email address</string>
    <string name="offline_email_error_message">Email is required</string>
    <string name="offline_email_hint">Email address</string>
    <string name="offline_menu_send_button">Send</string>
    <string name="offline_message_button">Leave a message</string>
    <string name="offline_message_cancel_button">Cancel</string>
    <string name="offline_message_error_hint">Please enter message</string>
    <string name="offline_message_error_message">Message is required</string>
    <string name="offline_message_hint">Message</string>
    <string name="offline_message_retry_button">Retry</string>
    <string name="offline_message_send_failed">Unable to send message.</string>
    <string name="offline_name_error_hint">Please enter your name</string>
    <string name="offline_name_error_message">Name is required</string>
    <string name="offline_name_hint">Name</string>
    <string name="offline_sent_confirmation_message">Your message has been sent</string>
    <string name="offline_validation_error_message">Please correct the above errors</string>
    <string name="pre_chat_account_offline_dialog_cancel_button">Cancel</string>
    <string name="pre_chat_account_offline_dialog_confirm_button">Message</string>
    <string name="pre_chat_account_offline_dialog_message">There are no agents currently online. Would you like to send a message?</string>
    <string name="pre_chat_departments_error_hint">Please select a department</string>
    <string name="pre_chat_departments_error_message">Department is required</string>
    <string name="pre_chat_departments_hint">Select a department</string>
    <string name="pre_chat_email_error_hint">Please enter your email address</string>
    <string name="pre_chat_email_error_message">Email is required</string>
    <string name="pre_chat_email_hint">Email address</string>
    <string name="pre_chat_email_validation_message">Please enter a valid email address.</string>
    <string name="pre_chat_menu_next_button">Next</string>
    <string name="pre_chat_message_error_hint">Please enter a message</string>
    <string name="pre_chat_message_error_message">Message is required</string>
    <string name="pre_chat_message_hint">Message</string>
    <string name="pre_chat_name_error_hint">Please enter your name</string>
    <string name="pre_chat_name_error_message">Name is required</string>
    <string name="pre_chat_name_hint">Name</string>
    <string name="pre_chat_phone_error_hint">Please enter your phone number</string>
    <string name="pre_chat_phone_error_message">Phone number is required</string>
    <string name="pre_chat_phone_hint">Phone number</string>
    <string name="pre_chat_phone_validation_message">Please enter a valid phone number.</string>
    <string name="pre_chat_validation_error_message">Please complete the required fields</string>
    <string name="rate_this_chat_comment_label">Comment</string>
    <string name="rate_this_chat_edit_comment_button">Edit comment…</string>
    <string name="rate_this_chat_leave_a_comment_button">Leave a comment…</string>
    <string name="rate_this_chat_leave_a_comment_title">Leave a comment</string>
    <string name="rate_this_chat_menu_item_send">Send</string>
    <string name="rate_this_chat_title">Rate this chat</string>
    <string name="reconnect_timeout_cancel_button">No</string>
    <string name="reconnect_timeout_confirm_button">Yes</string>
    <string name="reconnect_timeout_message">We have been unable to reconnect. Do you wish to continue trying?</string>
    <string name="reconnect_timeout_title">Connection lost</string>
    <string name="reconnecting_toast_message">Reconnecting…</string>
    <string name="required_field_template">%1$s *</string>
    <string name="Failed_to_download_order">Failed to retrieve this order, please tap to retry.</string>
    <string name="about">About</string>
    <string name="about_dd_om">About DoorDash Order Manager</string>
    <string name="about_doordash">About DoorDash</string>
    <string name="accept_order">Accept Order</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="active_orders">Active Orders</string>
    <string name="add_additional_charge">Add Additional Charge</string>
    <string name="add_charge">add charge</string>
    <string name="added_to_some_items">added to %d items</string>
    <string name="additional_charge">Additional Charges</string>
    <string name="additional_charge_applied">additional charge applied</string>
    <string name="additional_charge_message">"Additional Charges allow you to get compensated for following special requests from the customer.

 You're limited to a reasonable amount based on subtotal of the order."</string>
    <string name="adjust_order">Contact Customer to Adjust</string>
    <string name="adjust_prep_time">Adjust Pickup Time</string>
    <string name="adjust_price_order">Need to adjust the price of an order?</string>
    <string name="all_orders">All Orders</string>
    <string name="an_item_oos">Item out of stock?</string>
    <string name="an_option_oos">Option out of stock?</string>
    <string name="analytics_write_key">GsUlAFSmyCzqoJd8NoBTZikYqP9qrFpY</string>
    <string name="android_os_some">Android OS: %d</string>
    <string name="app_orientation">portrait</string>
    <string name="app_version_some">v%s</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="arrive_in">Arrive in</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="bullet_text">• %s</string>
    <string name="call_support">Call us: (855) 973-1040</string>
    <string name="camel_options">Options</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_entire_order">Cancel entire order</string>
    <string name="cancel_entire_order_c">Cancel Entire Order</string>
    <string name="cancel_item_instruction">"We'll automatially refund all active orders with this item, and remove them from your order queue."</string>
    <string name="canceled">Canceled</string>
    <string name="canceling_item">Canceling entire order...</string>
    <string name="catering_order">Catering Order!</string>
    <string name="change">change</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="charge_amount">charge amount</string>
    <string name="chat_with_support">Chat with DoorDash Support</string>
    <string name="close_drawer">Close drawer</string>
    <string name="com.crashlytics.android.build_id">d26dd753-a403-4205-b4dc-8c9344a3e133</string>
    <string name="complete">complete</string>
    <string name="confirm_for">confirm for</string>
    <string name="confirm_for_tomorrow">confirm for tomorrow</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="confirm_pickup_time">Confirm Pickup Time</string>
    <string name="confirm_replacement">Confirm Replacement</string>
    <string name="confirm_update">confirm update</string>
    <string name="connect">Connect</string>
    <string name="contact">contact</string>
    <string name="contact_customer">Contact Customer</string>
    <string name="contact_me">Contact me</string>
    <string name="contact_me_instruction">Ask how to proceed with this item.</string>
    <string name="contact_me_quote">\"Contact me\"</string>
    <string name="contact_number">Contact Number</string>
    <string name="customer">Customer</string>
    <string name="grow_your_business">Grow your business through delivery</string>
    <string name="pickup_in">Pickup in</string>
    <string name="prompt_email">Email Address or Phone Number</string>
    <string name="prompt_password">Password</string>
    <string name="roboto_medium">sans-serif-medium</string>
</resources>