<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.tyyar.tyyarordermanager.activities.LoginActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/item_padding_small"
        android:paddingRight="@dimen/item_padding_small">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/login_logo_width"
                android:layout_height="@dimen/login_logo_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/login_logo_margin_bottom"
                android:layout_marginTop="@dimen/login_logo_margin_top"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/dd_red"
                android:textSize="@dimen/text_size_large"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:gravity="center"
                android:text="@string/grow_your_business"
                android:textColor="#80000000"
                android:textSize="@dimen/text_size_small"/>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_pass_margin_top"
            android:background="#b8ffffff">

            <AutoCompleteTextView
                android:id="@+id/email_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textSize="@dimen/text_size_small"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#b8ffffff">

            <EditText
                android:id="@+id/password_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@string/roboto_medium"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="@dimen/text_size_small"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/login_form"
        android:layout_marginLeft="@dimen/item_padding_small"
        android:layout_marginRight="@dimen/item_padding_small"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:padding="@dimen/menu_chat_text_padding"
            android:text="@string/action_sign_in"
            android:textColor="#ffffffff"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/learn_more_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/menu_chat_text_padding"
            android:text="@string/learn_about_tyyar"
            android:textColor="@color/dd_red"
            android:textSize="@dimen/text_size_extra_small"/>
    </LinearLayout>
</RelativeLayout>