<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/order_details_app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="line 1"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="line 2"
                android:textSize="18sp"/>
        </LinearLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/items_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    <LinearLayout
        android:id="@+id/accept_order_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="@dimen/screen_margin"
        android:layout_marginLeft="@dimen/item_padding_small"
        android:layout_marginRight="@dimen/item_padding_small"
        android:background="@drawable/button_background"
        android:clickable="true"
        android:enabled="false"
        android:orientation="vertical"
        android:padding="12.0dip">

        <TextView
            android:id="@+id/frag_detail_btn_prepare_header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/roboto_medium"
            android:text="@string/accept_order"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/detail_item_text_medium"/>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
